# pocky

./: .clang-format  CMakeLists.txt  makefile  readme  readme.md
bootloader/src/: boot.asm  gdt64.asm  pm_switch.asm  stage2.asm
bootloader/src/io/: disk.asm  print.asm
bootloader/src/memory/: gdt.asm
bootloader/src/mode/: lm_switch.asm  long_mode.asm  pm_switch.asm
bootloader/src/stages/: boot.asm  stage2.asm
kernel/: linker.ld
kernel/src/: entry.asm  gdt.cpp  idt.asm  idt.cpp  io.cpp  kernel.cpp  keyboard.cpp  keyboard.hpp  lib.cpp  pic.cpp  shell.cpp  shell.hpp  terminal.cpp  vga.cpp  vga.hpp
kernel/src/asm/: ap_boot.asm  context.asm  entry.asm  gdt.asm  isr.asm  mouse.asm  timer.asm  vm.asm
kernel/src/core/: dynamic_linker.cpp  elf.cpp  elf.hpp  init.cpp  init.hpp  ipc.cpp  ipc.hpp  kernel.cpp  multiboot2.cpp  multiboot2.hpp  process.cpp  process.hpp  scheduler.cpp  scheduler.hpp  syscall.cpp  syscall.hpp  types.hpp
kernel/src/drivers/: ata.cpp  ata.hpp  keyboard.cpp  keyboard.hpp  mouse.cpp  mouse.hpp
kernel/src/fs/: fat32.cpp  fat32.hpp  filesystem.cpp  filesystem.hpp  users.cpp  users.hpp
kernel/src/hw/: acpi.cpp  acpi.hpp  gdt.cpp  gdt.hpp  idt.cpp  idt.hpp  io.cpp  io.hpp  pic.cpp  pic.hpp  rtc.cpp  rtc.hpp  smp.cpp  smp.hpp  timer.cpp  timer.hpp
kernel/src/lib/: cxxabi.cpp  lib.cpp  lib.hpp  printf.cpp  printf.hpp  string.hpp  vector.hpp
kernel/src/memory/: heap.cpp  heap.hpp  physical_memory.cpp  physical_memory.hpp  virtual_memory.cpp  virtual_memory.hpp
kernel/src/shell/: editor.cpp  editor.hpp  graphics.cpp  graphics.hpp  pager.cpp  pager.hpp  screen_state.cpp  screen_state.hpp  shell.cpp  shell.hpp  terminal.cpp  terminal.hpp  vga.cpp  vga.hpp
kernel/src/shell/commands/: alias.cpp  cat.cpp  cd.cpp  commands.hpp  cores.cpp  crash.cpp  echo.cpp  edit.cpp  help.cpp  history.cpp  ipc_test.cpp  less.cpp  ls.cpp  memory.cpp  mkdir.cpp  mv.cpp  pkill.cpp  ps.cpp  rm.cpp  shutdown.cpp  time.cpp  touch.cpp  uptime.cpp
